nobase_include_HEADERS = \
    sqlite/command.hpp \
    sqlite/database_exception.hpp \
    sqlite/query.hpp \
    sqlite/transaction.hpp \
    sqlite/connection.hpp \
    sqlite/execute.hpp \
    sqlite/result.hpp \
    sqlite/view.hpp \
	sqlite/ext/variant.hpp \
	$(NULL)

noinst_HEADERS=\
	sqlite/private/private_accessor.hpp \
	sqlite/private/result_construct_params_private.hpp \
	$(NULL)

