nobase_include_HEADERS = \
    sqlite/command.hpp \
    sqlite/connection.hpp \
    sqlite/database_exception.hpp \
    sqlite/deprecated.hpp \
    sqlite/execute.hpp \
    sqlite/query.hpp \
    sqlite/result.hpp \
    sqlite/savepoint.hpp \
    sqlite/transaction.hpp \
    sqlite/view.hpp \
    sqlite/ext/variant.hpp \
    $(NULL)

noinst_HEADERS=\
    sqlite/private/private_accessor.hpp \
    sqlite/private/result_construct_params_private.hpp \
    $(NULL)

